Fixed IE 7 issues with the dock, as well as the form inputs having too much padding.
git-svn-id: svn://svn.liferay.com/repos/public/portal/trunk@4727 05bdf26c-840f-0410-9ced-eb539d925f36

--- a/portal-web/docroot/html/themes/_common/css/forms.css
+++ b/portal-web/docroot/html/themes/_common/css/forms.css
@@ -45,7 +45,7 @@ input[type="submit"], input[type="button"] {
 
 /* ---------- IE6 chokes on attribute selectors in a chain, so we separate them into their own rule ---------- */
 
-.ie6 input.text, .ie6 input.password, .ie6 input.submit, .ie6 input.file, .ie6 input.button {
+.ie input.text, .ie input.password, .ie input.submit, .ie input.file, .ie input.button {
 	background: #fff url(../images/forms/input_shadow.gif) no-repeat;
 	border: 1px solid #aaa;
 	border-left-color: #777;
@@ -54,7 +54,7 @@ input[type="submit"], input[type="button"] {
 	padding: 0.3em;
 }
 
-.portlet-form-button, .ie6 input.submit, .ie6 input.button {
+.portlet-form-button, .ie input.submit, .ie input.button {
 	background: #FAFAFA url(../images/forms/button.gif) repeat-x;
 	border: 3px double #999;
 	border-left-color: #ccc;
