--- a/portal-web/docroot/html/themes/_common/css/navigation.css
+++ b/portal-web/docroot/html/themes/_common/css/navigation.css
@@ -150,7 +150,6 @@
 	background: #60738C;
 	border: 1px solid #B5B9BB;
 	border-top: none;
-	position: relative;
 	top: -2px;
 }
 
@@ -194,7 +193,6 @@
 
 .js .my-places {
 	display: none;
-	position: relative;
 }
 
 .js .lfr-dock li.my-places li a {
@@ -214,8 +212,8 @@
 	min-width: 200px;
 	padding: 0.2em;
 	position: absolute;
-	right: 100%;
-	top: 0;
+	right: 85%;
+	top: 87%;
 }
 
 .js .my-places.send-right .show-my-places {
@@ -278,12 +276,12 @@ li.my-places ul li ul {
 	width: 150px;
 }
 
-.ie6.js .lfr-dock .my-places .show-my-places h3 {
+.ie.js .lfr-dock .my-places .show-my-places h3 {
 	font-size: 1.1em;
 }
 
 .ie6.js .lfr-dock.expanded .lfr-dock-list-container {
-	zoom: 1;
+	height: 1%;
 }
 
 .ie6.js .my-places .show-my-places {
@@ -291,9 +289,9 @@ li.my-places ul li ul {
 }
 
 .ie6.js .lfr-dock li {
-	zoom: 1;
+	height: 1%;
 }
 
 .ie6.js .lfr-dock li a {
-	zoom: 1;
+	height: 1%;
 }
